--- a/package.json
+++ b/package.json
@@ -1,10 +1,10 @@
 {
   "name": "area-explorer",
   "version": "0.0.1",
-  "homepage": "http://bothness.github.io/area-explorer",
+  "homepage": "http://kham1508.github.io/host_test_3",
   "scripts": {
     "dev": "svelte-kit dev",
-    "build": "svelte-kit build && touch build/.nojekyll",
+    "build": "svelte-kit build",
     "preview": "svelte-kit preview",
     "deploy": "gh-pages -d build -t true"
   },
