--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "@sveltejs/adapter-static": "^1.0.0-next.17",
     "@sveltejs/kit": "next",
     "gh-pages": "^3.2.3",
+    "layercake": "^6.1.1",
     "mapbox-gl": "1.x",
     "parse-color": "^1.0.0",
     "svelte": "^3.34.0",
@@ -20,8 +21,7 @@
   },
   "dependencies": {
     "d3-dsv": "latest",
-    "d3-scale": "latest",
-    "layercake": "latest"
+    "d3-scale": "latest"
   },
   "type": "module"
 }
